src/Test/ElementServices/FeatureTests/TestData/bvt/parser/Errors/Error_TemplateTriggersOnButtonInTemplate.xaml
<Page xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
<!--
/*******************************************************************
 * Purpose: Verifies that the proper error reported when the Trigger property is defined on incorrect element.
 * Contributors: Microsoft
 *
 
  
 * Revision:         $Revision: 2 $
 
 * Filename:         $Source: //depot/devdiv/Orcas/SP/feature/WPF/wpf/Test/ElementServices/FeatureTests/TestData/bvt/parser/Errors/Error_TemplateTriggersOnButtonInTemplate.xaml $
********************************************************************/
-->
<StackPanel xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"> 

    <StackPanel.Resources>
    <ControlTemplate x:Key="foo" TargetType="{x:Type Button}">
        <Button>
            <ControlTemplate.Triggers>
                <!-- -->
            </ControlTemplate.Triggers>
        </Button>
    </ControlTemplate>
    </StackPanel.Resources>

</StackPanel>
</Page>
